--- a/TicketBookingWebApp/src/main/resources/templates/boardingpass.html
+++ b/TicketBookingWebApp/src/main/resources/templates/boardingpass.html
@@ -1,55 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<html xmlns:th="http://www.thymeleaf.org">
 
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Boarding Pass</title>
   <link rel="stylesheet" href="boardingpass.css">
-
 </head>
-<div class="container">
-  <h1 class="heading">Boarding Pass</h1>
-
-  <body>
-
-    <div class="box">
-      <div class="ticket">
-        <span class="airline">Javier Way</span>
-        <span class="boarding">BOARDING PASS</span>
-        <div class="content">
-
-          <span class="jfk">JFK</span>
-          <span class="plane">
-            <?xml version="1.0" ?><svg clip-rule="evenodd" fill-rule="evenodd" height="60" width="60"
-              image-rendering="optimizeQuality" shape-rendering="geometricPrecision" text-rendering="geometricPrecision"
-              viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
-              <g stroke="#222">
-                <line fill="none" stroke-linecap="round" stroke-width="30" x1="300" x2="55" y1="390" y2="390" />
-                <path
-                  d="M98 325c-9 10 10 16 25 6l311-156c24-17 35-25 42-50 2-15-46-11-78-7-15 1-34 10-42 16l-56 35 1-1-169-31c-14-3-24-5-37-1-10 5-18 10-27 18l122 72c4 3 5 7 1 9l-44 27-75-15c-10-2-18-4-28 0-8 4-14 9-20 15l74 63z"
-                  fill="#222" stroke-linejoin="round" stroke-width="10" />
-              </g>
-            </svg>
-          </span>
-          <span class="yyz">YYZ</span>
-
-
-          <div class="sub-content">
-            <p>First Name: <span th:text="${ticket.fname}"></span></p>
-            <p>Last Name: <span th:text="${ticket.lname}"></span></p>
-
-            <p>Departure Date: <span th:text="${ticket.departureDate}"></span></p>
-
-            <p>Round Trip: <span th:text="${ticket.roundTrip ? 'Yes' : 'No'}"></span></p>
-
-
-          </div>
-        </div>
+<body>
+<div class="box">
+  <div class="ticket">
+    <span class="airline">Javier Way</span> </br>
+    <span class="boarding">BOARDING PASS</span> </br>
+    <div class="content">
+      <span class="name">PASSENGER NAME: <span th:text="${fname} + ' ' + ${lname}"></span></span> </br>
+      <span class="origin">Origin: <span th:text="${origin}"></span></span> </br>
+      <span class="destination">Destination:  <span th:text="${destination}"></span></span></br>
+      <span class="departure-date">DEPARTURE DATE: <span th:text="${departureDate}"></span></span></br>
+      <span class="round-trip">ROUND TRIP: <span th:text="${roundTrip}"></span></span></br>
+      <span class="flight-time">Flight Time: <span th:text="${flightTime}"></span></span></br>
+      <span class="departure-time">Departure Time: <span th:text="${dTimes}"></span></span></br>
+      <!-- Flight Path Section -->
+      <div class="flight-path">
+        <h3>Flight Path:</h3>
+        <h3 th:each="airport : ${flightPath}" th:text="${airport}"> --> </h3>
       </div>
+      <!-- Other details -->
     </div>
+  </div>
 </div>
-
 </body>
-
 </html>
